@startuml 库存管理与调拨模块类图
skinparam linetype ortho
skinparam classAttributeIconSize 0
hide members
' Controller层
class StockInfoController {
  - stockInfoService: StockInfoService
  + list(): AjaxResult
  + getInfo(): AjaxResult
  + export(): void
}

class AllotOrderController {
  - allotOrderService: AllotOrderService
  + list(): AjaxResult
  + add(): AjaxResult
  + edit(): AjaxResult
  + remove(): AjaxResult
  + confirm(): AjaxResult
}

' Service层
interface StockInfoService {
  + selectStockInfoList(): List<StockInfo>
  + selectStockInfo(): StockInfo
  + updateStock(): int
  + checkSafetyStock(): void
}

interface AllotOrderService {
  + selectAllotOrderList(): List<StockAllotOrder>
  + insertAllotOrder(): int
  + updateAllotOrder(): int
  + deleteAllotOrder(): int
  + confirmAllot(): int
}

class StockInfoServiceImpl {
  - stockInfoMapper: StockInfoMapper
  - recordService: StockRecordService
  + selectStockInfoList(): List<StockInfo>
  + selectStockInfo(): StockInfo
  + updateStock(): int
  + checkSafetyStock(): void
}

class AllotOrderServiceImpl {
  - allotOrderMapper: AllotOrderMapper
  - stockInfoService: StockInfoService
  + selectAllotOrderList(): List<StockAllotOrder>
  + insertAllotOrder(): int
  + updateAllotOrder(): int
  + deleteAllotOrder(): int
  + confirmAllot(): int
}

' 实体类
class StockInfo {
  - infoId: Long
  - warehouseCode: String
  - locationCode: String
  - matCode: String
  - batchNo: String
  - quantity: BigDecimal
  - supplierCode: String
  - delFlag: String
  - createTime: Date
}

class StockRecord {
  - recordId: Long
  - warehouseCode: String
  - locationCode: String
  - labelId: Long
  - recordType: String
  - matCode: String
  - batchNo: String
  - quantity: BigDecimal
  - orderNo: String
  - supplierCode: String
  - workshopCode: String
  - createTime: Date
}

class StockAllotOrder {
  - allotId: Long
  - allotNo: String
  - fromWarehouseCode: String
  - fromLocationCode: String
  - toWarehouseCode: String
  - toLocationCode: String
  - allotStatus: String
  - allotProgress: String
  - delFlag: String
}

class StockAllotDetail {
  - detailId: Long
  - allotNo: String
  - matCode: String
  - batchNo: String
  - allotQuantity: BigDecimal
}

' 关联关系
StockInfoController --|> StockInfoService : 依赖
AllotOrderController --|> AllotOrderService : 依赖
StockInfoService <|.. StockInfoServiceImpl : 实现
AllotOrderService <|.. AllotOrderServiceImpl : 实现
StockInfoServiceImpl --|> StockInfo : 操作
StockInfoServiceImpl --|> StockRecord : 生成
AllotOrderServiceImpl --|> StockAllotOrder : 操作
AllotOrderServiceImpl --|> StockInfoService : 依赖
StockAllotOrder --|> StockAllotDetail : 包含
StockAllotDetail --|> StockInfo : 更新

@enduml

